[package]
name = "dskmac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-sdk = "0.3.0"
tokio = {version = "1.21.0",features = ["full"]}
ctrlc = {version = "3.2.3"}
futures = { version = "0.3.24",features = ["executor"] }
battery = "0.7.8"